tests/miz/fail/parser/fail_parser_export_late_001.miz
theorem T: thesis;
export std.core;
theorem U: thesis;
